--- a/Romanian/main/miui.apk/res/values-ro/strings.xml
+++ b/Romanian/main/miui.apk/res/values-ro/strings.xml
@@ -471,6 +471,7 @@
     <string name="phone">Telefon</string>
     <string name="pm">PM</string>
     <string name="privacy_policy">Politica de confidențialitate</string>
+    <string name="sar">Informații expunere la radiații(SAR)</string>
     <string name="saturday">Sâmbătă</string>
     <string name="saturday_short">Sâ</string>
     <string name="saturday_shortest">S</string>
