--- a/Romanian/main/Calculator.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Calculator.apk/res/values-ro/strings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Calculator</string>
+    <string name="app_name_danfa">Calculator Mi</string>
     <string name="cal_convert_to_word_figure">Convertiți în caractere financiare</string>
     <string name="cal_copy">Copiați</string>
     <string name="cal_edit_mode">Mod editare</string>
@@ -25,7 +26,7 @@
     <string name="convertion_unit_weight">Convertor unități de masă</string>
     <string name="cos">cos</string>
     <string name="cosDesc">cosinus</string>
-    <string name="currency_update_time_format">Ratele de schimb sunt furnizate de hexun.com (%s)</string>
+    <string name="currency_update_time_format">Ratele de schimb sunt furnizate de webull (%s)</string>
     <string name="current_rate_remind_commercial"/>
     <string name="current_rate_remind_fund"/>
     <string name="dateformat">dd/MM/yyyy</string>
@@ -139,10 +140,14 @@
     <string name="power">^</string>
     <string name="powerDesc">putere</string>
     <string name="preference_about_calculator">Despre Calculator</string>
+    <string name="preference_alert_follow_qq_group">Copiați și lipiți în QQ pentru a lăsa un comentariu</string>
     <string name="preference_alert_follow_wechat">Copiați și lipiți în WeChat pentru a urmări</string>
     <string name="preference_alert_follow_wechat_button">Copiați</string>
+    <string name="preference_check_update_summary_current_version">Versiunea curentă：%s</string>
+    <string name="preference_check_update_summary_new_version">A apărut o nouă versiune： %s</string>
     <string name="preference_check_update_title">Căutați actualizări</string>
     <string name="preference_feedback_title">Întrebări frecvente</string>
+    <string name="preference_follow_qq_group">Numărul grupului QQ:523274279</string>
     <string name="preference_follow_us">Urmăriți-ne</string>
     <string name="preference_follow_web_summary">www.miui.com</string>
     <string name="preference_follow_web_title">Site-ul oficial</string>
