--- a/Romanian/main/InCallUI.apk/res/values-ro/strings.xml
+++ b/Romanian/main/InCallUI.apk/res/values-ro/strings.xml
@@ -32,7 +32,9 @@
     <string name="callFailed_unobtainable_number">Număr greşit</string>
     <string name="callFailed_userBusy">Linie ocupată</string>
     <string name="callUnanswered_forwarded">Apel pierdut redirecţionat</string>
+    <string name="call_button_conference_manager_text">Gestionare conferință</string>
     <string name="call_button_dialer_text">Tastatură</string>
+    <string name="call_button_mute_text">Mut</string>
     <string name="call_button_tools_text">Caracteristici</string>
     <string name="call_contacts_deny_permission_msg">"Ați refuzat permisiunea de citire contacte; nu se pot afișa detaliile contactelor."</string>
     <string name="call_description_recording">Înregistrare…</string>
@@ -62,6 +64,7 @@
     <string name="card_title_hanging_up">Se încheie apelul</string>
     <string name="card_title_in_call">În timpul apelului</string>
     <string name="card_title_in_call_short">Apel</string>
+    <string name="card_title_in_video">Video </string>
     <string name="card_title_incoming_call">Apel</string>
     <string name="card_title_incoming_conference">Invitație la conferință</string>
     <string name="card_title_on_hold">"Apel menţinut "</string>
@@ -72,6 +75,8 @@
     <string name="card_title_upgrade_video_call_timed_out">"Nu s-a putut actualiza videoclipul"</string>
     <string name="card_title_video_call">Apel video</string>
     <string name="card_title_video_call_paused">Apel video oprit</string>
+    <string name="card_title_video_conf_call">Apel videoconferință</string>
+    <string name="card_video_hold_swap">Comutați</string>
     <string name="conference_call_description" formatted="false">%s,%s etc. total %s</string>
     <string name="conference_call_number">%s persoane</string>
     <string name="conference_call_single_description" formatted="false">%s etc. total %s</string>
@@ -240,6 +245,7 @@
     <string name="unknown">Necunoscut</string>
     <string name="upgrade_vt_prompt">Doriți să treceţi la apel video?</string>
     <string name="video_call_not_allowed_if_tty_enabled">Opriți mai întâi modul TTY</string>
+    <string name="video_conference_caller_info_name">"Apel videoconferință al lui %1$s"</string>
     <string name="video_switch_to_voice_call_prompt">Comutați la apel vocal</string>
     <string name="voicemail">Căsuța vocală</string>
     <string name="wait_prompt_str">"Trimiteţi următoarele tonuri?
