--- a/Romanian/main/Provision.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Provision.apk/res/values-ro/strings.xml
@@ -33,7 +33,7 @@
     <string name="other_settings_location">Locaţie</string>
     <string name="other_settings_location_summary">Permiteți aplicațiilor să acceseze locația dvs.</string>
     <string name="other_settings_mifg_online_content">Carusel de imagini de fundal</string>
-    <string name="other_settings_mifg_online_content_summary">Obțineți imagini de fundal noi în mod regulat.</string>
+    <string name="other_settings_mifg_online_content_summary">Permiteți conectarea la internet pentru Caruselul de imagini de fundal pentru a obține imagini de fundal noi.</string>
     <string name="other_settings_upload_debug_log_summary">Informațiile colectate vor fi utilizate pentru localizarea și analizarea problemelor de sistem și pot conține date personale. Aceste date nu vor fi folosite pentru a vă identifica.</string>
     <string name="other_settings_upload_debug_log_title">Trimiteți date de diagnosticare în mod automat</string>
     <string name="other_settings_user_experience">Programul Experiență Utilizator</string>
